# haskellweb

./: Main.hs  bisectrun.sh  flake.nix  ghcjs-demo.cabal  index.html  shell.nix
patches/: loosen-aeson-ghcjs-base.patch  short-text-aeson.patch  short-text-qc-instances.patch
